@@ -117,6 +117,7 @@ public class NoteDialog extends JDialog {
 
         getRootPane ().setDefaultButton (btOK);
         setResizable (false);
+        setLocationRelativeTo(getParent());
         pack ();
     }
 
@@ -144,6 +145,15 @@ public class NoteDialog extends JDialog {
         }
     }
 
+    @Override
+    public void setVisible(boolean visible) {
+        if (visible) {
+            // must be done before displaying, otherwise it's not placed centered
+            setLocationRelativeTo(getParent());
+        }
+        super.setVisible(visible);
+    }
+    
     /**
      * Sets the initial exercise values for all controls.
      */
