@@ -60,6 +60,7 @@ public class SportTypeListDialog extends JDialog {
         this.context = context;
         this.document = document;
         initComponents ();
+        setLocationRelativeTo(getParent());
         this.getRootPane ().setDefaultButton (btClose);
         liSportTypes.setCellRenderer (new SportTypeCellRenderer ());
         ListUtils.increaseListCellHeight (liSportTypes);
