@@ -52,6 +52,7 @@ public class StatisticDialog extends JDialog {
         this.context = context;
         this.document = document;
         initComponents ();
+        setLocationRelativeTo(getParent());
         this.getRootPane ().setDefaultButton (btClose);      
         btClose.requestFocus ();
         
